force-app/main/default/objects/Contact_Connector__c/Contact_Connector__c.object-meta.xml
<CustomObject>
    <label>Contact Connector</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Contact Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>