force-app/main/default/objects/Contact_Connector__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>R00N70000001bHXsEAM</relationshipName>
    <type>Lookup</type>
</CustomField>