force-app/main/default/objects/Contact_Connector__c/fields/Related_Organization__c.field-meta.xml
<CustomField>
    <fullName>Related_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>R00N70000001bHXeEAM</relationshipName>
    <type>Lookup</type>
</CustomField>