force-app/main/default/objects/Contact_Connector__c/fields/Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Role_Title__c</fullName>
    <label>Role/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>